[gd_scene load_steps=5 format=3 uid="uid://bp26lnpove7jm"]

[ext_resource type="Script" uid="uid://cqrja64t7ukvn" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="PackedScene" uid="uid://bviiholub753x" path="res://Models/gate_key.glb" id="2_rkbax"]

[sub_resource type="SphereShape3D" id="SphereShape3D_oul6g"]
radius = 0.587145

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hiwcr"]
radius = 0.253187
height = 1.5

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_oul6g")
SPEED = 1.4
headbob_freq = 7.0
max_sprint = 2.0
mouse_sensitivity = 0.004

[node name="Neck" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.36709, 0)

[node name="Head" type="Marker3D" parent="Neck"]

[node name="Camera3D" type="Camera3D" parent="Neck/Head"]

[node name="InteractablesProbe" type="Area3D" parent="Neck/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.55428, 0)
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Neck/Head/Camera3D/InteractablesProbe"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53743, -0.845998)
shape = SubResource("SphereShape3D_oul6g")

[node name="hand_position" type="Marker3D" parent="Neck/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.29472, -0.277688, -0.54032)

[node name="gate_key" parent="Neck/Head/Camera3D/hand_position" instance=ExtResource("2_rkbax")]
transform = Transform3D(0.377113, -0.874272, -0.305669, 0, 0.330037, -0.943968, 0.926167, 0.355983, 0.124461, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.768447, 0)
shape = SubResource("CapsuleShape3D_hiwcr")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Interactable Prompt" type="RichTextLabel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.0
offset_top = 261.0
offset_right = 140.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Press [E] or [Space] to interact"
fit_content = true

[node name="Notification" type="RichTextLabel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -626.0
offset_top = -63.0
offset_right = 626.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 46
bbcode_enabled = true
text = "[center]"

[connection signal="area_entered" from="Neck/Head/Camera3D/InteractablesProbe" to="." method="_on_interactables_probe_area_entered"]
[connection signal="area_exited" from="Neck/Head/Camera3D/InteractablesProbe" to="." method="_on_interactables_probe_area_exited"]
